--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,14 @@
 name = "FiberNlse"
 uuid = "21c1a3e3-8543-4069-a1c4-5ed3e2bf6e2f"
 authors = ["brian-sinquin <brian.sinquin@gmail.com>"]
-version = "2.0"
-[deps]
+version = "2.0.0"
 
+[deps]
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-
 julia = "1"
