--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,11 @@ uuid = "21c1a3e3-8543-4069-a1c4-5ed3e2bf6e2f"
 authors = ["brian-sinquin <brian.sinquin@gmail.com>"]
 version = "2.0.0"
 
-[deps]
-FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-
 [compat]
-julia = "1"
+julia = "1.6.7"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
